# boardrd

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  busybox.config  pyproject.toml  requirements-system.txt  requirements.txt
boardrd/: __init__.py
boardrd/boards/arm64/ti/: k3-am62-lp-sk.yaml  k3-am62-pocketbeagle2.yaml  k3-am625-beagleplay.yaml  k3-am625-sk.yaml  k3-am6254atl-sk.yaml  k3-am62a7-sk.yaml  k3-am62d2-evm.yaml  k3-am62l3-evm.yaml  k3-am62p5-sk.yaml  k3-am642-evm.yaml  k3-am642-sk.yaml  k3-am654-base-board.yaml  k3-am654-evm.yaml  k3-am654-gp-evm.yaml  k3-am654-idk.yaml  k3-am67a-beagley-ai.yaml  k3-am68-sk-base-board.yaml  k3-am69-sk.yaml  k3-j7200-common-proc-board.yaml  k3-j721e-beagleboneai64.yaml  k3-j721e-common-proc-board.yaml  k3-j721e-evm.yaml  k3-j721e-sk.yaml  k3-j721s2-common-proc-board.yaml  k3-j721s2-evm.yaml  k3-j722s-evm.yaml  k3-j742s2-evm.yaml  k3-j784s4-evm.yaml
boardrd/lib/: __init__.py  busybox.config  dt_analyzer.py  initrd_builder.py  mod_resolver.py  paths.py  workflow.py
boardrd/templates/: init.sh.tmpl
boardrd/workflows/: mmc.yaml  nfs.yaml  ospi.yaml  ufs.yaml  usb.yaml
tests/: conftest.py  test_mod_resolver.py  test_workflow.py
